--- a/index.html
+++ b/index.html
@@ -29,43 +29,43 @@
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-karachaevsk.jpg" alt="Карачаево-Черкессия">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Карачаево-Черкессия</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Карачаево-Черкессия</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-elbrus.jpg" alt="Гора Эльбрус">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Гора Эльбрус</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Гора Эльбрус</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-dombay.jpg" alt="Домбай">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Домбай</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Домбай</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-baikal.jpg" alt="Байкал">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Байкал</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Байкал</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-kamchatka.jpg" alt="Камчатка">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Камчатка</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Камчатка</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
       <figure class="elements__cards">
         <img class="elements__foto" src="./images/elements-karelia.jpg" alt="Карелия">
         <figcaption class="elements__caption">
-          <h2 class="elements__caption_title">Карелия</h2>
-          <button class="elements__btn_heart"></button>
+          <h2 class="elements__title">Карелия</h2>
+          <button class="elements__heart"></button>
         </figcaption>
       </figure>
     </section>
