--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <title>Место</title>
   <link rel="stylesheet" href="./pages/index.css" />
 </head>
+
 <body class="root">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Место Россия">
@@ -15,79 +17,78 @@
     <section class="profile">
       <div class="profile__avatar">
         <img class="profile__foto" src="./images/profile-foto.jpg" alt="Фото профиля">
-          <div class="profile__info">
-            <div class="profile__name-field">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__btn-modify" id="popup-btn-open"></button>
-            </div>
-            <p class="profile__description">Исследователь океана</p>
+        <div class="profile__info">
+          <div class="profile__name-field">
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <button type="button" class="profile__btn-modify" id="popup-btn-open"></button>
           </div>
+          <p class="profile__description">Исследователь океана</p>
         </div>
-      <button type="submit" class="profile__button" id="profile-submit-btn"></button>
+      </div>
+      <button type="button" class="profile__button" id="profile-edit-btn"></button>
     </section>
     <section class="elements">
-      <figure class="elements__cards">
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-karachaevsk.jpg" alt="Карачаево-Черкессия">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Карачаево-Черкессия</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
-      <figure class="elements__cards">
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-elbrus.jpg" alt="Гора Эльбрус">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Гора Эльбрус</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
-      <figure class="elements__cards">
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-dombay.jpg" alt="Домбай">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Домбай</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
-      <figure class="elements__cards">
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-baikal.jpg" alt="Байкал">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Байкал</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
-      <figure class="elements__cards">
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-kamchatka.jpg" alt="Камчатка">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Камчатка</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
-      <figure class="elements__cards">
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
+      <div class="elements__cards">
         <img class="elements__foto" src="./images/elements-karelia.jpg" alt="Карелия">
-        <figcaption class="elements__caption">
+        <div class="elements__caption">
           <h2 class="elements__title">Карелия</h2>
-          <button class="elements__heart"></button>
-        </figcaption>
-      </figure>
+          <button type="button" class="elements__heart"></button>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
   </footer>
   <div class="popup" id="popup">
-    <div class="popup__body">
-      <div class="popup__content">
-        <button class="popup__btn-close" id="popup__btn-close">&#10006;</button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <label class="popup__text">
-          <input type="text" class="popup__profile-name" id="profname" placeholder="Имя" required minlength="2" maxlength="50">
-        </label>
-        <label class="popup__text">
-          <input type="text" class="popup__profile-description" id="profdecription" placeholder="О себе" required minlength="2" maxlength="50">
-        </label>
+    <div class="popup__content">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__text">
+        <input type="text" class="popup__profile-name" id="profname" placeholder="Имя" required minlength="2"
+          maxlength="50">
+        <input type="text" class="popup__profile-description" id="profdecription" placeholder="О себе" required
+          minlength="2" maxlength="50">
         <button type="submit" class="popup__btn-save">Сохранить</button>
-      </div>
+        <button type="button" class="popup__btn-close" id="popup__btn-close"></button>
+      </form>
     </div>
   </div>
-  <script src="./pages/index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
+
 </html>
