--- a/index.html
+++ b/index.html
@@ -41,35 +41,35 @@
         <img class="card__foto" src="./images/elements-elbrus.jpg" alt="Гора Эльбрус">
         <div class="card__caption">
           <h2 class="card__title">Гора Эльбрус</h2>
-          <button type="button" class="card__heart" aria-label="лайк"></button></button>
+          <button type="button" class="card__heart" aria-label="лайк"></button>
         </div>
       </div>
       <div class="card">
         <img class="card__foto" src="./images/elements-dombay.jpg" alt="Домбай">
         <div class="card__caption">
           <h2 class="card__title">Домбай</h2>
-          <button type="button" class="card__heart" aria-label="лайк"></button></button>
+          <button type="button" class="card__heart" aria-label="лайк"></button>
         </div>
       </div>
       <div class="card">
         <img class="card__foto" src="./images/elements-baikal.jpg" alt="Байкал">
         <div class="card__caption">
           <h2 class="card__title">Байкал</h2>
-          <button type="button" class="card__heart" aria-label="лайк"></button></button>
+          <button type="button" class="card__heart" aria-label="лайк"></button>
         </div>
       </div>
       <div class="card">
         <img class="card__foto" src="./images/elements-kamchatka.jpg" alt="Камчатка">
         <div class="card__caption">
           <h2 class="card__title">Камчатка</h2>
-          <button type="button" class="card__heart" aria-label="лайк"></button></button>
+          <button type="button" class="card__heart" aria-label="лайк"></button>
         </div>
       </div>
       <div class="card">
         <img class="card__foto" src="./images/elements-karelia.jpg" alt="Карелия">
         <div class="card__caption">
           <h2 class="card__title">Карелия</h2>
-          <button type="button" class="card__heart" aria-label="лайк"></button></button>
+          <button type="button" class="card__heart" aria-label="лайк"></button>
         </div>
       </div>
     </section>
@@ -88,7 +88,7 @@
         <button type="submit" class="popup__btn-save">Сохранить</button>
       </form>
       <button type="button" class="popup__btn-close" id="popup__btn-close"
-        aria-label="закрыть всплывающее окно"></button></button>
+        aria-label="закрыть всплывающее окно"></button>
     </div>
   </div>
   <script src="./scripts/index.js"></script>
