--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="popup" id="popup-foto-view">
     <figure class="popup__figure">
       <img class="figure__image" src="#" alt="#">
-      <figcaption class="figure__caption">#</figcaption>
+      <figcaption class="figure__caption"></figcaption>
       <button type="button" class="popup__btn-close" id="popup__btn-close-foto-view"
         aria-label="закрыть всплывающее окно"></button>
     </figure>
