--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </div>
   <div class="popup" id="popup-foto-view">
     <figure class="popup__figure">
-      <img class="figure__image" src="#" alt="#">
-      <figcaption class="figure__caption"></figcaption>
+      <img class="popup__figure-image" src="#" alt="#">
+      <figcaption class="popup__figure-caption"></figcaption>
       <button type="button" class="popup__btn-close" id="popup__btn-close-foto-view"
         aria-label="закрыть всплывающее окно"></button>
     </figure>
