--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <input type="text" class="popup__input popup__input_data_decription" id="decription-input"
             placeholder="О себе" minlength="2" maxlength="200" required>
           <span class="popup__input-error decription-input-error"></span>
-          <button type="submit" class="popup__btn-save">Сохранить</button>
+          <button type="submit" class="popup__btn-save" id="popup__btn-save-profile">Сохранить</button>
         </fieldset>
       </form>
       <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
