--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <button type="button" class="card__btn-delete" aria-label="удалить"></button>
     </li>
   </template>
+  <script src="./scripts/fotoсards.js"></script>
   <script src="./scripts/index.js"></script>
   <script src="./scripts/validate.js"></script>
 </body>
