--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
     </div>
   </div>
-  <div class="popup" id="popup-foto-view">
+  <div class="popup popup_foto_view" id="popup-foto-view">
     <figure class="popup__figure">
       <img class="popup__figure-image" src="#" alt="#">
       <figcaption class="popup__figure-caption"></figcaption>
