--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <button type="button" class="card__btn-delete" aria-label="удалить"></button>
     </li>
   </template>
-  <script src="./scripts/fotoсards.js"></script>
-  <script src="./scripts/index.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/Cards.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 
 </html>
