--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,15 @@
   <main class="content">
     <section class="profile">
       <div class="profile__content">
-        <img class="profile__foto" src="<%=require('../images/profile-foto.jpg')%>" alt="Фото профиля">
+        <button class="profile__btn-avatar">
+          <img class="profile__foto" src="<%=require('../images/profile-foto.jpg')%>" alt="Фото профиля">
+        </button>
         <div class="profile__info">
           <div class="profile__name-field">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" class="profile__btn-modify" aria-label="редактирование профиля"></button>
           </div>
-          <p class="profile__description">Исследователь океана</p>
+          <p class="profile__description"></p>
         </div>
       </div>
       <button type="button" class="profile__add-button" aria-label="добавить фото с описанием"></button>
@@ -50,6 +52,20 @@
       <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
     </div>
   </div>
+  <div class="popup" id="popup-edit-useravatar">
+    <div class="popup__content">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form class="popup__form" name="profile-form" novalidate>
+        <fieldset class="popup__fieldset">
+          <input type="url" class="popup__input popup__input_data_avatar" id="avatar-input" name="userAvatar"
+            placeholder="Ссылка на аватар" required>
+          <span class="popup__input-error avatar-input-error"></span>
+          <button type="submit" class="popup__btn-save" id="popup__btn-save-avatar">Сохранить</button>
+        </fieldset>
+      </form>
+      <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
+    </div>
+  </div>
   <div class="popup" id="popup-add-foto">
     <div class="popup__content">
       <h2 class="popup__title">Новое место</h2>
@@ -67,6 +83,15 @@
       <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
     </div>
   </div>
+  <div class="popup" id="popup-submit-delete">
+    <div class="popup__content">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <form class="popup__form" name="delete-form" novalidate>
+        <button type="submit" class="popup__btn-save" id="popup__btn-submit-delete">Да</button>
+      </form>
+      <button type="button" class="popup__close" aria-label="закрыть всплывающее окно"></button>
+    </div>
+  </div>
   <div class="popup popup_foto_view" id="popup-foto-view">
     <figure class="popup__figure">
       <img class="popup__figure-image" src="#" alt="#">
@@ -79,7 +104,10 @@
       <img class="card__foto">
       <div class="card__caption">
         <h2 class="card__title" id="card__title"></h2>
-        <button type="button" class="card__heart" aria-label="лайк"></button>
+        <div class="card__heart-block">
+          <button type="button" class="card__heart" aria-label="лайк"></button>
+          <span class="card__hearts-counter"></span>
+        </div>
       </div>
       <button type="button" class="card__btn-delete" aria-label="удалить"></button>
     </li>
