--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
 
 <body class="root">
   <header class="header">
-    <img class="header__logo" src="<%=require('../images/header-logo.svg')%>" alt="Место Россия">
+    <img class="header__logo" src="<%=require('../src/images/header-logo.svg')%>" alt="Место Россия">
   </header>
   <main class="content">
     <section class="profile">
       <div class="profile__content">
         <button class="profile__btn-avatar">
-          <img class="profile__foto" src="<%=require('../images/profile-foto.jpg')%>" alt="Фото профиля">
+          <img class="profile__foto" src="<%=require('../src/images/profile-foto.jpg')%>" alt="Фото профиля">
         </button>
         <div class="profile__info">
           <div class="profile__name-field">
